--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -82,7 +82,7 @@
     .info {
       position: relative;
       span {
-        font-family: 'CompassSans-Regular','CompassSans-Regular', 'CompassSans-Light' !important;
+        font-family: 'Gilroy-Regular','Gilroy-Regular', 'CompassSans-Light' !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
@@ -106,7 +106,7 @@
       text-transform: capitalize;
       line-height: 1;
       font-size: 1em;
-      font-family: 'CompassSans-Regular','CompassSans-Medium';
+      font-family: 'Gilroy-Regular','Gilroy-SemiBold';
       color: #224a69;
     }
 
