--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -24,7 +24,7 @@
 
   .title {
     font-size: 14px;
-    font-family: CompassSans-Regular;
+    font-family: Gilroy-Regular;
     /* font-weight: 600; */
     color: #326671;
     margin-bottom: 10px !important;
@@ -106,7 +106,7 @@
   .author {
     a {
       color: #105a6d;
-      font-family: CompassSans-Medium;
+      font-family: Gilroy-SemiBold;
 
       &:hover {
         text-decoration: none;
