--- a/src/less/author.less
+++ b/src/less/author.less
@@ -84,7 +84,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'CompassSans-Medium', 'CompassSans-Light', sans-serif;
+						font-family: 'Gilroy-SemiBold', 'CompassSans-Light', sans-serif;
 					}
 
 					.country,
@@ -174,7 +174,7 @@
 								line-height: 1.1;
 								width: 100%;
 								height: 14px;
-								font-family: 'CompassSans-Medium';
+								font-family: 'Gilroy-SemiBold';
 								margin-top: 3px;
 							}
 						}
@@ -185,7 +185,7 @@
 							display: inline-block!important;
 							line-height: 1.4;
 							padding-top: 5px;
-							font-family: 'CompassSans-Medium',sans-serif;
+							font-family: 'Gilroy-SemiBold',sans-serif;
 						}
 					}
 
@@ -272,7 +272,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'CompassSans-Medium', 'CompassSans-Light', sans-serif;
+			font-family: 'Gilroy-SemiBold', 'CompassSans-Light', sans-serif;
 		}
 
 		i {
