--- a/src/less/code.less
+++ b/src/less/code.less
@@ -108,13 +108,13 @@ blockquote .language-python {
       margin-bottom: 15px;
       margin-left: -6%;
       padding: 8px 40px;
-      font-family: 'CompassSans-Regular';
+      font-family: 'Gilroy-Regular';
       font-size: 1.3em;
       font-style: normal;
       font-variant: normal;
       font-weight: 600;
       text-rendering: auto;
-      text-shadow: -2px 2px 1px -2px 2px 1px rgba(13, 19, 43, 0.45);
+      text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.8) !important;
       content: "Code Snippet";
       opacity: 1;
       @media(max-width: 600px) {
