--- a/src/less/cover.less
+++ b/src/less/cover.less
@@ -33,12 +33,12 @@
 	}
 
 	.post-excerpt {
-		 font-family: 'CompassSans-Regular';
+		 font-family: 'Gilroy-Regular';
 	}
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'CompassSans-Regular',serif;
+		font-family: 'Gilroy-Regular',serif;
 	}
 
 	.avatar {
