--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -272,7 +272,7 @@
       position: relative;
       bottom: 0;
       color: #162c52;
-      font-family: CompassSans-Medium,CompassSans-Light;
+      font-family: Gilroy-SemiBold,CompassSans-Light;
       width: auto;
       display: block;
       align-items: left;
@@ -284,7 +284,7 @@
         line-height: 1.2;
         margin: 0;
         font-weight: 600;
-        font-family: 'CompassSans-Regular';
+        font-family: 'Gilroy-Regular';
       }
 
       p {
@@ -294,7 +294,7 @@
         line-height: 1.4;
         text-align: left;
         font-weight: 100;
-        font-family: 'CompassSans-Regular';
+        font-family: 'Gilroy-Regular';
         flex-grow: 1;
         flex-shrink: 0;
         flex-basis: auto;
@@ -312,7 +312,7 @@
         bottom: 20px;
         right: 20px;
         font-size: 0.9em;
-        font-family: 'CompassSans-Medium';
+        font-family: 'Gilroy-SemiBold';
       }
     }
   }
