--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -266,7 +266,7 @@
 	.contributors {
 		.single-author-name {
 			font-size: 0.9em !important;
-			font-family: 'CompassSans-Medium', sans-serif !important;
+			font-family: 'Gilroy-SemiBold', sans-serif !important;
 
 		}
 
@@ -335,7 +335,7 @@
 				margin: 0 8px 8px 0;
 				flex-grow: 1;
 				text-align: center;
-				font-family: CompassSans-Regular;
+				font-family: Gilroy-Regular;
 				transition: all 0.3s ease-out;
 				border-right: 1px solid #173144;
     		border-bottom: 1px solid #173144;
@@ -351,7 +351,7 @@
 			.single-author {
 				font-size: 18px;
 				font-weight: 200;
-				font-family: 'CompassSans-Medium', serif;
+				font-family: 'Gilroy-SemiBold', serif;
 				transition: all 0.2s ease;
 				border-bottom: 1px dashed rgba(90, 87, 93, 0.29) !important;
 
@@ -402,7 +402,7 @@
 					font-size: 0.95em;
 					margin: 0;
 					line-height: 1.4;
-					font-family: CompassSans-Medium,sans-serif !important;
+					font-family: Gilroy-SemiBold,sans-serif !important;
 					font-weight: 500;
 					display: block;
 
@@ -420,7 +420,7 @@
 						font-size: 0.8em;
 						margin-top: 2px;
 						font-weight: 200;
-						font-family: CompassSans-Regular,sans-serif;
+						font-family: Gilroy-Regular,sans-serif;
 					}
 				}
 
@@ -434,7 +434,7 @@
 					font-size: 0.8em;
 					margin-top: 9px;
 					font-weight: 200;
-					font-family: 'CompassSans-Regular', sans-serif;
+					font-family: 'Gilroy-Regular', sans-serif;
 
 					a {
 						color: @white;
