--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -56,7 +56,7 @@
 
     li {
       display: inline-block;
-      font-family: 'CompassSans-Medium', 'CompassSans-Light';
+      font-family: 'Gilroy-SemiBold', 'CompassSans-Light';
       color: #444;
       font-size: 1.1em;
       border: 0;
@@ -152,7 +152,7 @@
       padding: 15px 0 0;
       height: fit-content;
       text-transform: uppercase;
-      font-family: 'CompassSans-Medium', sans-serif;
+      font-family: 'Gilroy-SemiBold', sans-serif;
     }
 
     a {
@@ -189,7 +189,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: CompassSans-Medium;
+      font-family: Gilroy-SemiBold;
       font-size: 1em;
     }
 
@@ -243,7 +243,7 @@
     /* font-weight: bold; */
     color: #222;
     text-transform: uppercase;
-    font-family: 'CompassSans-Medium', sans-serif;
+    font-family: 'Gilroy-SemiBold', sans-serif;
   }
 
   .error {
