--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -219,7 +219,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'CompassSans-Regular',CompassSans-Medium;
+        font-family: 'Gilroy-Regular',Gilroy-SemiBold;
         /*  &::after {
           content: "";
           width: 90px;
@@ -259,7 +259,7 @@
 
           h5 {
             font-size: .9em;
-            font-family: 'CompassSans-Regular';
+            font-family: 'Gilroy-Regular';
             color: #3c3d46;
             line-height: 1.2;
             font-weight: 100;
@@ -381,7 +381,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'CompassSans-Regular';
+                font-family: 'Gilroy-Regular';
                 margin-right: 5px;
               }
 
@@ -398,7 +398,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'CompassSans-Regular',sans-serif;
+        font-family: 'Gilroy-Regular',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
