--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -86,7 +86,7 @@
       line-height: 1.2;
       margin-bottom: 15px;
       text-align: left;
-      font-family: CompassSans-Medium,CompassSans-Medium,serif;
+      font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
       @media(max-width: 600px) {
         font-size: 1.3em;
         margin-bottom: 5px;
@@ -101,7 +101,7 @@
       font-size: 15px;
       text-overflow: ellipsis;
       display: -webkit-box;
-      font-family: CompassSans-Regular!important;
+      font-family: Gilroy-Regular!important;
       -webkit-line-clamp: 6;
       overflow: hidden;
       text-align: left;
