--- a/src/less/login.less
+++ b/src/less/login.less
@@ -155,7 +155,7 @@
 
     .btn {
       font-size: 14px;
-      font-family: CompassSans-Medium;
+      font-family: Gilroy-SemiBold;
       text-transform: uppercase;
       padding: 13px 20px;
       line-height: 1;
