--- a/src/less/post.less
+++ b/src/less/post.less
@@ -57,7 +57,7 @@
 		margin: 35px 60px 10px;
 		line-height: 1.2;
 		display: block;
-		font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
+		font-family: 'Product-Sans', 'Gilroy-SemiBold' !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		color: @h1-color;
@@ -78,7 +78,7 @@
 		a {
 			color: @h1-color;
 			transition: all 0.2s ease-out;
-			font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
+			font-family: 'Product-Sans', 'Gilroy-SemiBold' !important;
 
 			&:hover {
 				color: @secondary-color;
@@ -92,19 +92,19 @@
 	}
 
 	.excerpt {
-		font-weight: 100;
+		font-weight: 400;
 		font-size: 1.2em;
 		margin: 10px 60px 25px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'HackerSans-Regular', 'CompassSans-Regular';
+		font-family: 'Product-Sans', 'Gilroy-Regular';
 		@media(max-width: 800px) {
 			 margin: 10px 60px 40px;
 		}
 		@media(max-width: 600px) {
-			font-weight: 100;
+			font-weight: 300;
 			font-size: 1.1em;
-			font-family: CompassSans-Medium;
+			font-family: Gilroy-SemiBold;
 			max-width: 95%;
 			margin: 0 25px;
 		}
@@ -114,8 +114,8 @@
 		margin: 40px 0 10px;
 		color: #276890;
 		line-height: 1.3;
-		font-family: 'CompassSans-Regular';
-		font-weight: 600!important;
+		font-family: 'Product-Sans';
+		font-weight: 400!important;
 		font-size: 2em;
 		font-size: 1.8em;
 		width: fit-content;
@@ -146,7 +146,7 @@
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 12px;
-		font-family: 'CompassSans-Medium';
+		font-family: 'Gilroy-SemiBold';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -163,8 +163,8 @@
 
 	p {
 		text-align: left;
-		font-size: 1.05em;
-		line-height: 1.7;
+		font-size: 1em;
+		line-height: 1.8;
 		@media(max-width: 600px) {
 			font-size: 1em;
 		}
@@ -282,7 +282,7 @@
 
 		p {
 			line-height: 1.5!important;
-			font-family: CompassSans-Regular;
+			font-family: Gilroy-Regular;
 			color: #69a07a;
 			font-size: 0.95em;
 			width: 100%;
@@ -354,8 +354,8 @@
 				}
 
 				span {
-					font-family: 'CompassSans-Regular',sans-serif;
-					font-weight: 500;
+					font-family: 'Gilroy-Regular',sans-serif;
+					font-weight: 600;
 				}
 
 				.tags {
@@ -363,7 +363,7 @@
 					padding: 8px 10px;
 
 					span {
-						font-family: 'CompassSans-Regular',sans-serif !important;
+						font-family: 'Gilroy-Regular',sans-serif !important;
 					}
 					@media(max-width: 600px) {
 						height: 20px !important;
@@ -374,7 +374,7 @@
 						font-size: 1em !important;
 					}
 					span {
-						font-weight: 500 !important;
+						font-weight: 600 !important;
 						font-size: 1.1em !important;
 					}
 
@@ -390,7 +390,7 @@
 						height: 24px;
 
 						span {
-							font-weight: 500;
+							font-weight: 600;
 						}
 
 						i {
@@ -493,7 +493,7 @@
 
 		a {
 			color: @theme-color;
-			font-family: 'CompassSans-Regular';
+			font-family: 'Gilroy-Regular';
 		}
 
 		p > a {
@@ -572,7 +572,7 @@
 			background: #e9f3f7;
 			color: #32687b;
 			padding: 20px;
-			font-family: 'CompassSans-Regular',sans-serif;
+			font-family: 'Gilroy-Regular',sans-serif;
 			font-style: normal;
 			font-size: 1em;
 			line-height: 1.6;
@@ -590,7 +590,7 @@
 			}
 
 			* {
-				font-family: CompassSans-Regular,sans-serif;
+				font-family: Gilroy-Regular,sans-serif;
 				font-style: normal;
 				line-height: 1.6;
 			}
@@ -970,7 +970,7 @@
 			display: block;
 			line-height: 1.5;
 			margin-top: 20px;
-			font-weight: 100;
+			font-weight: 300;
 			width: 100%;
 			clear: both;
 			font-size: 0.9em;
@@ -979,7 +979,7 @@
 		.author {
 			font-size: 1.5em;
 			margin-bottom: 10px;
-			font-family: 'CompassSans-Medium', 'CompassSans-Light';
+			font-family: 'Gilroy-SemiBold', 'CompassSans-Light';
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
@@ -995,7 +995,7 @@
 		.meta-info {
 			font-size: 12px;
 			line-height: 1.5;
-			font-weight: 100;
+			font-weight: 300;
 			color: @text-color-light;
 			margin-bottom: 7px;
 
