--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -146,7 +146,7 @@
 
         a {
           color: white;
-          font-family: 'CompassSans-Medium', san-serif;
+          font-family: 'Gilroy-SemiBold', san-serif;
           text-transform: uppercase;
           font-size: 14px;
           font-weight: 500;
