--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -40,9 +40,9 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			 text-overflow: ellipsis;
-			font-family: 'CompassSans-Regular',sans-serif !important;
+			font-family: 'Gilroy-Regular',sans-serif !important;
 			line-height: 1.55;
-			font-size: .9em;
+			font-size: 1em;
 			font-weight: 500;
 			color: #2d2f35;
 
@@ -103,7 +103,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'HackerSans-Medium', 'CompassSans-Regular';
+			font-family: 'Product-Sans', 'Gilroy-Regular';
 
 			.title-link {
 
@@ -119,7 +119,7 @@
 			a {
 				color: @text-color-heading;
 				transition: all 0.2s ease-out;
-				font-family: 'HackerSans-Medium','CompassSans-Light',sans-serif;
+				font-family: 'Product-Sans','CompassSans-Light',sans-serif;
 
 				&:hover {
 					color: @secondary-color;
@@ -130,14 +130,14 @@
 		.post-excerpt {
 			margin: 10px auto 0;
 			line-height: 1.21;
-			font-weight: 100;
+			font-weight: 400;
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'HackerSans-Medium', 'CompassSans-Medium',CompassSans-Regular,serif;
+			font-family: 'Product-Sans', 'Gilroy-SemiBold',Gilroy-Regular,serif;
 			@media(max-width: 600px) {
 				font-size: 1em;
-				font-family: HackerSans-Regular;
+				font-family: Product-Sans;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
 				overflow: hidden;
@@ -183,7 +183,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'CompassSans-Regular','CompassSans-Regular',serif;
+		font-family: 'Gilroy-Regular','Gilroy-Regular',serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -197,7 +197,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'CompassSans-Regular','CompassSans-Regular';
+			font-family: 'Gilroy-Regular','Gilroy-Regular';
 		}
 
 		.author-mobile {
@@ -223,7 +223,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'CompassSans-Regular','CompassSans-Medium';
+				font-family: 'Gilroy-Regular','Gilroy-SemiBold';
 				color: #224a69;
 			}
 			@media (max-width: 800px) {
@@ -233,7 +233,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'CompassSans-Regular','CompassSans-Regular', 'CompassSans-Light';
+			font-family: 'Gilroy-Regular','Gilroy-Regular', 'CompassSans-Light';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -298,7 +298,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'CompassSans-Regular','CompassSans-Regular', 'CompassSans-Light' !important;
+					font-family: 'Gilroy-Regular','Gilroy-Regular', 'CompassSans-Light' !important;
 					color: #627d90;
 					line-height: 1;
 					overflow: hidden;
@@ -315,7 +315,7 @@
 
 			&.date {
 				span {
-					font-family: 'CompassSans-Regular',CompassSans-Regular,sans-serif;
+					font-family: 'Gilroy-Regular',Gilroy-Regular,sans-serif;
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -384,7 +384,7 @@
 		border-right: 2px solid #009c83;
 		border-bottom: 1px solid #009c83;
 		background: linear-gradient(135deg,#4fc388,#21b6b7);
-		font-family: 'CompassSans-Medium',serif;
+		font-family: 'Gilroy-SemiBold',serif;
 		font-size: 18px;
 		font-weight: 600;
 		line-height: 1;
@@ -400,7 +400,7 @@
 			display: none;
 			padding: 13px 18px;
 			font-size: 14px;
-			font-family: CompassSans-Regular,serif;
+			font-family: Gilroy-Regular,serif;
 		}
 	}
 }
