--- a/src/less/redis.less
+++ b/src/less/redis.less
@@ -45,7 +45,7 @@ margin: auto;
     margin: 0 auto 1em;
     width: auto;
     color: #424446;
-    font-family: CompassSans-Regular;
+    font-family: Gilroy-Regular;
     font-size: 2em;
     font-size: 1.8em;
     font-weight: 400!important;
