--- a/src/less/repos.less
+++ b/src/less/repos.less
@@ -13,7 +13,7 @@
 }
 
 .repo-title {
-  font-family: 'CompassSans-Regular',serif;
+  font-family: 'Gilroy-Regular',serif;
   font-size: 18px !important;
   font-weight: 600 !important;
 
