--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -197,11 +197,12 @@ header{
     }
 
     a {
-      color: #696780;
-      font-size: .9em;
-      font-family: HackerSans-Medium;
+      font-size: 1em;
+      font-family: 'Product-Sans';
       text-transform: uppercase;
       transform: scale(1);
+      color: #505f77;
+      font-weight: 500;
       transition: all .2s ease-out;
       position: absolute;
       left:0;
@@ -247,7 +248,7 @@ header{
 
     a {
       font-size: .8em;
-      font-family: CompassSans-Regular;
+      font-family: Gilroy-Regular;
     }
 
     &:nth-child(even) {
