--- a/src/less/series.less
+++ b/src/less/series.less
@@ -81,11 +81,11 @@
       }
 
       .sort-title {
-        font-family: 'CompassSans-Medium';
+        font-family: 'Gilroy-SemiBold';
       }
 
       .sort-method {
-        font-family: 'CompassSans-Regular';
+        font-family: 'Gilroy-Regular';
       }
     }
   }
@@ -119,7 +119,7 @@
       padding: 10px;
       background: #1ab1d4;
       color: #fff;
-      font-family: 'CompassSans-Medium';
+      font-family: 'Gilroy-SemiBold';
       box-shadow: 1px 1px 1px rgba(67, 67, 84, .9);
       line-height: 1;
     }
@@ -158,7 +158,7 @@
             font-size: 0.9em;
             @media(max-width: 600px) {
               font-size: 0.85em;
-              font-family: 'HackerSans-Regular','CompassSans-Light',sans-serif;
+              font-family: 'Product-Sans','CompassSans-Light',sans-serif;
             }
           }
           @media(max-width: 600px) {
@@ -169,7 +169,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'HackerSans-Regular','CompassSans-Regular',serif;
+          font-family: 'Product-Sans','Gilroy-Regular',serif;
           font-size: 0.9em;
           font-weight: 100;
           line-height: 1.21;
@@ -182,7 +182,7 @@
         }
 
         .postcount {
-          font-family: 'CompassSans-Regular',serif;
+          font-family: 'Gilroy-Regular',serif;
           font-size: 1.3em;
         }
       }
