--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -19,7 +19,7 @@
     width: 258px;
     margin: 30px auto auto;
     text-align: center;
-    font-family: CompassSans-Medium;
+    font-family: Gilroy-SemiBold;
     line-height: 1.35;
     text-transform: uppercase;
     position: absolute;
@@ -261,7 +261,7 @@
   font-size: 1em;
   font-weight: 300;
   letter-spacing: 0.8px;
-  font-family: CompassSans-Medium;
+  font-family: Gilroy-SemiBold;
 }
 
 .float-right {
@@ -278,7 +278,7 @@
   top: 31% !important;
   right: 0 !important;
   color: white !important;
-  font-family: CompassSans-Medium;
+  font-family: Gilroy-SemiBold;
   letter-spacing: 4px !important;
   font-size: 3em !important;
   margin: 0 auto;
