--- a/src/less/table.less
+++ b/src/less/table.less
@@ -36,13 +36,13 @@ table {
 
     th {
       text-align: center;
-      font-family: 'CompassSans-Regular';
+      font-family: 'Gilroy-Regular';
       min-width: 30px;
       padding: 10px;
       font-size: .9em;
 
       &::before{
-         font-family: 'CompassSans-Medium' !important;
+         font-family: 'Gilroy-SemiBold' !important;
       }
     }
   }
@@ -141,7 +141,7 @@ td, th{
       width: 120px;
       height: 100%;
       th {
-        font-family: CompassSans-Medium;
+        font-family: Gilroy-SemiBold;
         text-align: center;
       }
 
@@ -217,7 +217,7 @@ td, th{
 
 .dataframe thead th {
   text-align: center !important;
-  font-family: 'CompassSans-Medium' !important;
+  font-family: 'Gilroy-SemiBold' !important;
 }
 
 .dataframe tbody tr th:only-of-type {
