--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -12,7 +12,7 @@
 
   .post-title a {
     font-size: 1em !important;
-    font-family: 'HackerSans-Regular',CompassSans-Regular;
+    font-family: 'Product-Sans',Gilroy-Regular;
   }
 }
 
@@ -24,7 +24,7 @@
   font-size: 14px;
 
   span {
-    font-family: CompassSans-Regular;
+    font-family: Gilroy-Regular;
   }
 }
 
