--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -244,7 +244,7 @@
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
 			background: #daecff;
-			font-family: CompassSans-Regular;
+			font-family: Gilroy-Regular;
 			flex-grow: 1;
 			text-align: center;
 			.transition(all 0.2s ease);
@@ -454,7 +454,7 @@
 			letter-spacing: 0;
 			font-size: 16px;
 			margin: 0;
-			font-family: CompassSans-Regular,CompassSans-Medium,CompassSans-Light,sans-serif;
+			font-family: Gilroy-Regular,Gilroy-SemiBold,CompassSans-Light,sans-serif;
 			font-weight: 500;
 			display: inline-block;
 		}
@@ -526,7 +526,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
+		font-family: 'Gilroy-Regular', 'CompassSans-Light', sans-serif;
 		font-weight: 100;
 		display: inline-block;
 
@@ -554,7 +554,7 @@
 		letter-spacing: 1px;
 		margin-top: 0;
 		white-space: nowrap;
-		font-family: CompassSans-Medium,CompassSans-Medium,serif;
+		font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
 		@media(max-width: 1040px) {
 			font-size: 1.3em;
 		}
@@ -571,7 +571,7 @@
 .post-title {
 	a {
 		color: #208cad;
-		font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
+		font-family: 'Gilroy-Regular', 'CompassSans-Light', sans-serif;
 		transition: all 0.2s ease;
 		font-weight: 600 !important;
 
@@ -590,7 +590,7 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: HackerSans-Medium,CompassSans-Medium,serif;
+		font-family: Product-Sans,Gilroy-SemiBold,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
@@ -600,7 +600,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: CompassSans-Medium,CompassSans-Medium,serif;
+		font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -666,7 +666,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
+				font-family: 'Gilroy-Regular', 'CompassSans-Light', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 				@media(max-width: 600px) {
