--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'CompassSans-Regular', sans-serif;
+	font-family: 'Gilroy-Regular', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -41,7 +41,7 @@ section {
 }
 
 strong {
-  font-family: CompassSans-Medium,CompassSans-Light;
+  font-family: Gilroy-SemiBold,CompassSans-Light;
   font-weight: 500;
 }
 
@@ -54,7 +54,7 @@ strong {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'HackerSans-Medium', 'CompassSans-Regular', 'CompassSans-Medium', sans-serif;
+	font-family: 'Product-Sans', 'Gilroy-Regular', 'Gilroy-SemiBold', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -68,14 +68,14 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'CompassSans-Regular', 'CompassSans-Medium', serif;
+	font-family: 'Gilroy-Regular', 'Gilroy-SemiBold', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
 }
 
 h3 {
-	font-family: 'CompassSans-Medium', serif;
+	font-family: 'Gilroy-SemiBold', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
@@ -89,7 +89,7 @@ h1 {
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'CompassSans-Medium', 'CompassSans-Medium';
+	font-family: 'Gilroy-SemiBold', 'Gilroy-SemiBold';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -119,7 +119,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'CompassSans-Medium', serif;
+	font-family: 'Gilroy-SemiBold', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
@@ -209,7 +209,7 @@ textarea {
 
 blockquote {
 	border-left: 4px solid @theme-color;
-	font-family: 'CompassSans-Medium', serif;
+	font-family: 'Gilroy-SemiBold', serif;
 	font-style: italic;
 }
 
