--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -223,7 +223,7 @@
 
 			a {
 				color: #fff;
-		    font-family: HackerSans-Medium,serif;
+		    font-family: 'Product-Sans',serif;
 		    text-transform: uppercase;
 				font-size: 16px;
 				font-weight: 600;
