--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -31,7 +31,7 @@
       .tag-name {
         font-size: 2.2em;
         color: white !important;
-        font-family: CompassSans-Medium;
+        font-family: Gilroy-SemiBold;
         text-shadow: 0 0 20px #2f2d56;
         margin-top: 110px;
       }
@@ -42,7 +42,7 @@
         max-width: 90%;
         margin: 20px auto 0;
         color: white;
-        font-family: CompassSans-Regular;
+        font-family: Gilroy-Regular;
         text-shadow: 0 0 20px #2f2d56;
       }
     }
@@ -62,7 +62,7 @@
         font-size: 1.4em;
 
         a {
-          font-family: 'HackerSans-Regular','CompassSans-Light',sans-serif;
+          font-family: 'Product-Sans','CompassSans-Light',sans-serif;
         }
       }
 
@@ -77,7 +77,7 @@
 
       .post-excerpt {
         font-size: 1em;
-        font-family: 'CompassSans-Regular';
+        font-family: 'Gilroy-Regular';
         min-height: 70px;
         margin-bottom: 35px;
       }
