--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -8,7 +8,7 @@
 
   h1 {
     font-size: 2em;
-    font-family: CompassSans-Medium,CompassSans-Medium,serif;
+    font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
     font-weight: 700;
     color: #276890;
     text-transform: uppercase;
