--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -39,7 +39,8 @@
   }
 
   span {
-    color: @text-color-light;
+    color: #56585f;
+    font-size: 1.1em;
   }
 
   .author-specs {
@@ -94,7 +95,7 @@
     line-height: 1.5;
     font-weight: 100;
     float: left!important;
-    font-size: 0.85em;
+    font-size: 0.9em;
     margin: 0 auto !important;
     max-width: 450px;
     padding: 0 25px 30px;
@@ -179,6 +180,8 @@
     background-position-y: center !important;
     box-shadow: 0 4px 2px -2px rgba(20, 24, 53, 0.15);
     background: linear-gradient(-15deg, rgba(255, 255, 255, .1) 100px ,transparent 0), linear-gradient(15deg, rgba(255, 255, 255, .1) 100px ,transparent 0),linear-gradient(-15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(0deg, #749BE1 150px, #9267C7);
+
+    
   }
 }
 
