--- a/src/less/code.less
+++ b/src/less/code.less
@@ -114,12 +114,13 @@ blockquote .language-python {
       font-variant: normal;
       font-weight: 600;
       text-rendering: auto;
-      text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.8) !important;
+      text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.6) !important;
       content: "Code Snippet";
       opacity: 1;
       @media(max-width: 600px) {
         padding: 8px 20px;
-        font-size: 1em;
+        font-size: 1.4em;
+        margin-bottom: 0;
       }
     }
 
