--- a/src/less/cover.less
+++ b/src/less/cover.less
@@ -9,6 +9,12 @@
 	padding: 40px;
 	margin-bottom: 30px;
 
+	@media(max-width: 600px) {
+		margin-left: calc(~"-50vw + 50%") !important;
+		margin-right: calc(~"-50vw + 50%") !important;
+		margin-top: -19px;
+	}
+
 	.post-title {
 		font-weight: 500;
 	}
@@ -26,6 +32,14 @@
 		width: 80%;
     margin: 0 auto;
 		text-align: 14px;
+
+		@media(max-width: 600px) {
+			width: 93%;
+			margin: 0 auto;
+			text-align: 14px;
+			font-size: .9em;
+			line-height: 1.6;
+		}
 	}
 
 	.post-count {
