--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -151,7 +151,7 @@
 
 	.menu {
 		/*idth: 300px;*/
-		width: 300px;
+		width: 280px;
 		float: right;
 		display: flex;
 		justify-content: space-between;
@@ -225,10 +225,14 @@
 				color: #fff;
 		    font-family: 'Product-Sans',serif;
 		    text-transform: uppercase;
-				font-size: 16px;
+				font-size: .85em;
 				font-weight: 600;
 		    letter-spacing: .5px;
 		    transition: all .1s ease-out;
+
+				&:hover{
+					cursor:pointer;
+				}
 				@media(max-width: 800px) {
 					padding: 0;
 					font-weight: 500;
