--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -63,6 +63,7 @@
 
         a {
           font-family: 'Product-Sans','CompassSans-Light',sans-serif;
+          font-weight: 500;
         }
       }
 
@@ -80,6 +81,7 @@
         font-family: 'Gilroy-Regular';
         min-height: 70px;
         margin-bottom: 35px;
+            font-weight: 600;
       }
 
       .post-permalink {
