--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -197,7 +197,7 @@ header{
     }
 
     a {
-      font-size: 1em;
+      font-size: .85em;
       font-family: 'Product-Sans';
       text-transform: uppercase;
       transform: scale(1);
