--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -105,7 +105,7 @@
 
   .roundup {
     color: #666fa5 !important;
-    background-color: lighten(#666fa5, 40%);
+    background-color: #dce0f5;
 
     * {
       color: #666fa5 !important;
@@ -185,11 +185,11 @@
   }
 
   .flask {
-    color: #505da9 !important;
-    background-color: lighten(#474663, 60%);
+    color: #545b6f !important;
+    background-color: #ced1d6;
 
     * {
-      color: #505da9 !important;
+      color: #545b6f !important;
     }
   }
 
